# LoRA-GA

./: .gitignore  README.md  README_full_ft_llama3_1_8b.md  README_full_ft_llama3_8b.md  pyproject.toml
human-eval/: setup.py
human-eval/human_eval/: evaluate_functional_correctness.py
human-eval/human_eval.egg-info/: SOURCES.txt
peft/: pyproject.toml
reproduce/: Readme.md  eval_gsm8k.py  eval_humaneval.py  eval_mmlu.py  run_exp.py  run_llama3_1_8b_full_ft_deepspeed.sh  run_llama3_8b_full_ft_deepspeed.sh  utils.py
reproduce/conf/: config.yaml
reproduce/conf/model/: llama3_1_8b.yaml  llama3_8b_instruct.yaml
reproduce/deepspeed/: zero2_bf16.json  zero3_bf16.json
