[project]
name = "lora-ga-workspace"
version = "0.1.0"
description = "Workspace environment for LoRA-GA experiments."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "accelerate>=0.30.1,<0.31",
  "bitsandbytes>=0.43.1",
  "datasets>=2.19.1,<3",
  "deepspeed>=0.14.4,<0.15",
  "fire>=0.6.0",
  "huggingface-hub>=0.23.0,<1",
  "hydra-core>=1.3.2,<2",
  "hydra-optuna-sweeper>=1.2.0,<2",
  "human-eval",
  "omegaconf>=2.3.0,<3",
  "pandas>=2.2.2,<3",
  "psutil>=5.9.8",
  "regex>=2024.5.10",
  "sentencepiece>=0.2.0",
  "setuptools>=70",
  "torch>=2.3.0,<2.4",
  "transformers>=4.45.2,<=4.45.2",
  "wandb>=0.17.0,<1",
  "peft",
]

[project.optional-dependencies]
flash-attn = ["flash-attn>=2.5.8"]

[tool.uv]
package = false

[tool.uv.sources]
human-eval = { path = "human-eval", editable = true }
peft = { path = "peft", editable = true }

[tool.uv.extra-build-dependencies]
deepspeed = ["torch"]
flash-attn = ["torch"]
